# NavDataManager

./: .gitignore  CMakeLists.txt  README.md
cmake/: NavDataManagerConfig.cmake.in  generate_schema_header.cmake
include/NavDataManager/: AirportQuery.h  NavDataManager.h  NavDataQuery.h  Types.h
src/: CMakeLists.txt  NavDataManager.cpp  NavDataManager.h  main.cpp
src/internal/: QueryBuilder.h
src/internal/query/: ParserQuery.cpp  ParserQuery.h
src/navlib/: AirportQuery.cpp  CMakeLists.txt  NavDataManager.cpp  NavDataManager.h  NavDataQuery.cpp
src/parser/: LookaheadLineReader.cpp  LookaheadLineReader.h  XPlaneDatParser.cpp  XPlaneDatParser.h
src/sql/: schema.sql
test/: CMakeLists.txt  create_test_db.cpp  integrity_test.cpp  ndm_test.cpp  parsing_test.cpp  performance_test.cpp  query_test.cpp  simple_test_base.h
